--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo App</title>
+    <title>Todo App By Hassaan</title>
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
+    
     <div id="main">
         <div id="box">
             <h1>Todo App</h1>
@@ -16,8 +17,7 @@
             <br />
             <br />
             <br />
-            <ol id="list">
-
+            <ol id="ol">
             </ol>
         </div>
     </div>
